--- a/package.json
+++ b/package.json
@@ -5,22 +5,12 @@
   "version": "1.0.0",
   "description": "Notificación y consulta de items",
   "main": "server/server.js",
-  "scripts": {    
-    "start": "node --expose-http2 server.js"
+  "scripts": {
+    "start": "node server/server.js"
   },
-  "keywords": [
-    "grpc",
-    "protocol",
-    "buffers",
-    "rpc"
-  ],  
   "dependencies": {
     "@grpc/proto-loader": "^0.3.0",
     "grpc": "^1.13.0",
     "mongodb": "^3.1.8"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/pabduran/grpc-demo"
   }
 }
